--- a/public/view/m-kitty-dashboard/manage-kitty.ejs
+++ b/public/view/m-kitty-dashboard/manage-kitty.ejs
@@ -176,7 +176,7 @@
                             </div>
                             <div class="col-xl-3">
                                 <label for="kitty_billing_frequency" class="form-label">Bill Type</label>
-                                <select class="form-control" name="kitty_billing_frequency" id="kitty_billing_frequency">
+                                <select class="form-control" name="kitty_billing_frequency" id="kitty_billing_frequency" disabled>
                                     <option value="">Select</option>
                                     <option value="weekly">Weekly</option>
                                     <option value="monthly">Monthly</option>
@@ -246,6 +246,219 @@
           </div>
           <div class="row">
             <div class="col-xl-12">
+              <div class="row">
+                <div class="col-xxl-12 col-xl-12">
+                  <div class="row" style="display: flex; justify-content: center;">
+                    <div class="col-xxl-3">
+                      <div
+                        class="card custom-card overflow-hidden main-content-card"
+                      >
+                        <div
+                          class="card-body p-4"
+                          style="background-color: gainsboro"
+                        >
+                          <div class="d-flex align-items-start gap-3">
+                            <div class="flex-fill">
+                              <h1 class="mb-2 fs-12 cus">
+                                Total Bill Raised(in ₹)
+                              </h1>
+                              <div class="pb-0 mt-0">
+                                <div>
+                                  <h5 class="fw-medium mb-1">
+                                    <span class="count-up" data-count="385"
+                                      ></span
+                                    >₹ 25,000
+                                  </h5>
+                                </div>
+                              </div>
+                            </div>
+                            <div
+                              class="main-card-icon primary border-3 border border-primary border-opacity-50 rounded-circle"
+                            >
+                              <div
+                                class="avatar avatar-md bg-primary border border-primary border-opacity-10 avatar-rounded"
+                              >
+                                <div class="avatar avatar-sm svg-white">
+                                  <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="44"
+                                    height="44"
+                                    viewBox="0 0 24 24"
+                                    stroke-width="1.5"
+                                    stroke="#d01f2f"
+                                    fill="none"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                  >
+                                    <path
+                                      stroke="none"
+                                      d="M0 0h24v24H0z"
+                                      fill="none"
+                                    />
+                                    <path
+                                      d="M7 8v-2a2 2 0 0 1 2 -2h9a2 2 0 0 1 2 2v2"
+                                    />
+                                    <path
+                                      d="M7 16v2a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-2"
+                                    />
+                                    <rect
+                                      x="3"
+                                      y="8"
+                                      width="18"
+                                      height="8"
+                                      rx="2"
+                                    />
+                                    <circle cx="16.5" cy="12" r="1.5" />
+                                  </svg>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xxl-3">
+                      <div
+                        class="card custom-card overflow-hidden main-content-card"
+                      >
+                        <div
+                          class="card-body p-4"
+                          style="background-color: gainsboro"
+                        >
+                          <div class="d-flex align-items-start gap-3">
+                            <div class="flex-fill">
+                              <h6 class="mb-2 fs-12 cus">
+                                Received Bill Payment (in ₹)
+                              </h6>
+                              <div class="pb-0 mt-0">
+                                <div>
+                                  <h5 class="fw-medium mb-1">
+                                    <span class="count-up" data-count="385"
+                                      ></span
+                                    > ₹ 18,000
+                                  </h5>
+                                </div>
+                              </div>
+                            </div>
+                            <div
+                              class="main-card-icon primary border-3 border border-primary border-opacity-50 rounded-circle"
+                            >
+                              <div
+                                class="avatar avatar-md bg-primary border border-primary border-opacity-10 avatar-rounded"
+                              >
+                                <div class="avatar avatar-sm svg-white">
+                                  <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="44"
+                                    height="44"
+                                    viewBox="0 0 24 24"
+                                    stroke-width="1.5"
+                                    stroke="#d01f2f"
+                                    fill="none"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                  >
+                                    <path
+                                      stroke="none"
+                                      d="M0 0h24v24H0z"
+                                      fill="none"
+                                    />
+                                    <path
+                                      d="M7 8v-2a2 2 0 0 1 2 -2h9a2 2 0 0 1 2 2v2"
+                                    />
+                                    <path
+                                      d="M7 16v2a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-2"
+                                    />
+                                    <rect
+                                      x="3"
+                                      y="8"
+                                      width="18"
+                                      height="8"
+                                      rx="2"
+                                    />
+                                    <circle cx="16.5" cy="12" r="1.5" />
+                                  </svg>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-xxl-3">
+                      <div
+                        class="card custom-card overflow-hidden main-content-card"
+                      >
+                        <div
+                          class="card-body p-4"
+                          style="background-color: gainsboro"
+                        >
+                          <div class="d-flex align-items-start gap-3">
+                            <div class="flex-fill">
+                              <h6 class="mb-2 fs-12 cus">
+                                Pending Bill Payments (in ₹)
+                              </h6>
+                              <div class="pb-0 mt-0">
+                                <div>
+                                  <h5 class="fw-medium mb-1">
+                                    <span class="count-up" data-count="385"
+                                      >
+                                      </span
+                                    > ₹ 7,000
+                                  </h5>
+                                </div>
+                              </div>
+                            </div>
+                            <div
+                              class="main-card-icon primary border-3 border border-primary border-opacity-50 rounded-circle"
+                            >
+                              <div
+                                class="avatar avatar-md bg-primary border border-primary border-opacity-10 avatar-rounded"
+                              >
+                                <div class="avatar avatar-sm svg-white">
+                                  <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    width="44"
+                                    height="44"
+                                    viewBox="0 0 24 24"
+                                    stroke-width="1.5"
+                                    stroke="#d01f2f"
+                                    fill="none"
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                  >
+                                    <path
+                                      stroke="none"
+                                      d="M0 0h24v24H0z"
+                                      fill="none"
+                                    />
+                                    <path
+                                      d="M7 8v-2a2 2 0 0 1 2 -2h9a2 2 0 0 1 2 2v2"
+                                    />
+                                    <path
+                                      d="M7 16v2a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-2"
+                                    />
+                                    <rect
+                                      x="3"
+                                      y="8"
+                                      width="18"
+                                      height="8"
+                                      rx="2"
+                                    />
+                                    <circle cx="16.5" cy="12" r="1.5" />
+                                  </svg>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-12">
               <div class="card custom-card">
                 <div
                   class="card-header justify-content-between"
@@ -266,12 +479,13 @@
                           <th scope="col">S.No.</th>
                           <th scope="col">Bill Date</th>
                           <th scope="col">Chapter Name</th>
-                          <th scope="col">Chapter Kitty Fees</th>
                           <th scope="col">Chapter Meeting Day</th>
+                          <th scope="col">Chapter Kitty Fees</th>
                           <th scope="col">Bill Type</th>
                           <th scope="col">Description</th>
                           <th scope="col">Total Weeks</th>
                           <th scope="col">Total Amount</th>
+                          <th scope="col" >Actions</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -348,6 +562,11 @@ async function fetchKittyPayments() {
                 <td><b>${payment.description || 'N/A'}</b></td>
                 <td><b>${payment.total_weeks || 'N/A'}</b></td>
                 <td><b>₹ ${payment.total_bill_amount || 'N/A'}</b></td>
+                <td>
+        <span class="badge bg-danger text-light delete-btn" data-region-id="${payment.payment_id}">
+     Delete
+    </span>
+      </td>
             `;
             tableBody.appendChild(row);
         });
@@ -361,9 +580,7 @@ async function fetchKittyPayments() {
 
 // Call the function on page load
 fetchKittyPayments();
-
-
-
       </script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
       <%- include('../partials/footer') %> 
