--- a/public/view/partials/sidebar.ejs
+++ b/public/view/partials/sidebar.ejs
@@ -393,6 +393,11 @@
                       >Raise New Bill</a
                     >
                   </li>
+                  <li class="slide">
+                    <a href="/k/add-credit" class="side-menu__item"
+                      >Add Credit</a
+                    >
+                  </li>
                 </ul>
               </li>
 
@@ -720,6 +725,7 @@
     "/tr/add-training": ".training-menu",
     "/k/manage-kitty": ".kitty-menu",
     "/k/kitty-management": ".kitty-menu",
+    "/k/add-credit": ".kitty-menu",
   };
 
   // Mark the active menu and open its dropdown
