--- a/public/view/member-dashboard/member-dashboard.ejs
+++ b/public/view/member-dashboard/member-dashboard.ejs
@@ -4,7 +4,7 @@
 
  <!-- sidebar -->
 
- <%- include('../partials/sidebar') %>
+ <%- include('../partials/member-sidebar') %>
 
  <!-- end sidebar -->
 
