--- a/public/view/m-member/member-transactions.ejs
+++ b/public/view/m-member/member-transactions.ejs
@@ -316,7 +316,7 @@
                   class="card-header justify-content-between"
                   style="background-color: gainsboro !important"
                 >
-                  <div class="card-title">All Transactions</div>
+                  <div class="card-title">All Kitty Transactions</div>
                   <div class="d-flex">
                     <!-- Region Filter -->
                     <!-- Month Filter -->
@@ -391,16 +391,11 @@
                     <table class="table text-nowrap">
                       <thead>
                         <tr>
-                          <th scope="col">S.No.</th>
-                          <th scope="col">Date</th>
-                          <th scope="col">Amount</th>
-                          <th scope="col">Payment Method</th>
-                          <th scope="col">Debit (₹)</th>
-                          <th scope="col">Credit (₹)</th>
-                          <th scope="col">Balance (₹)</th>
-                          <th scope="col">Transaction ID</th>
-                          <th scope="col">PG Status</th>
-                          <th scope="col">Payment Type</th>
+                          <th scope="col-5">S.No.</th>
+                          <th scope="col-5">Date</th>
+                          <th scope="col-5">Description</th>
+                          <th scope="col-5">Amount</th>
+                          <th scope="col-5">Balance</th>
                         </tr>
                       </thead>
                       <tbody>
